tests/ui/parser/attribute/attr-before-eof.stderr
error: expected item after attributes
  --> $DIR/attr-before-eof.rs:3:1
   |
LL | #[derive(Debug)]
   | ^^^^^^^^^^^^^^^^ expected an item after this

error: aborting due to 1 previous error

