tests/ui/parser/attribute/attr-before-eof.rs
fn main() {}

#[derive(Debug)] //~ERROR expected item after attributes
